networking/destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: server
spec:
  host: server
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bot
spec:
  host: bot
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
