networking/virtual-service-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bot
spec:
  hosts:
  - bot
  http:
  - route:
    - destination:
        host: bot
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
  - server
  gateways:
  - botapp-gateway
  http:
  - route:
    - destination:
        host: server
        subset: v1
