networking/virtual-service-mirroring.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bot
spec:
  hosts:
    - bot
  http:
  - route:
    - destination:
        host: bot
        subset: v1
      weight: 100
    mirror:
      host: bot
      subset: v2
