networking/virtual-service-test-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bot
spec:
  hosts:
    - bot
  http:
  - route:
    - destination:
        host: bot
        subset: v1
    fault:
      delay:
        fixedDelay: 5s
        percent: 30
