networking/virtual-service-test-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bot
spec:
  hosts:
    - bot
  http:
  - match:
    - headers:
        user:
          exact: jason
    route:
    - destination:
        host: bot
        subset: v1
  - route:
    - destination:
        host: bot
        subset: v2
    retries:
      attempts: 3
      perTryTimeout: 2s
