networking/virtual-service-test-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bot
spec:
  hosts:
    - bot
  http:
  - match:
    - headers:
        user:
          exact: jason
    route:
    - destination:
        host: bot
        subset: v2
  - route:
    - destination:
        host: bot
        subset: v1
